--- a/app/package.json
+++ b/app/package.json
@@ -8,13 +8,23 @@
     "ios": "expo run:ios"
   },
   "dependencies": {
+    "@tamagui/config": "^1.121.10",
     "expo": "~52.0.23",
+    "expo-constants": "^17.0.4",
+    "expo-font": "^13.0.3",
+    "expo-linking": "^7.0.4",
+    "expo-router": "^4.0.16",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.5"
+    "react-native": "0.76.5",
+    "react-native-safe-area-context": "^5.1.0",
+    "react-native-screens": "^4.5.0",
+    "react-native-svg": "^15.11.1",
+    "tamagui": "^1.121.10"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@tamagui/theme-builder": "^1.121.10",
     "@types/react": "~18.3.12",
     "expo-dev-client": "^5.0.8",
     "typescript": "^5.3.3"
