--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,8 @@
     "ios": "expo run:ios"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
     "@tamagui/config": "^1.121.10",
     "expo": "~52.0.23",
     "expo-constants": "^17.0.4",
@@ -17,15 +19,19 @@
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-gesture-handler": "^2.22.0",
+    "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
     "react-native-svg": "^15.11.1",
+    "react-native-vector-icons": "^10.2.0",
     "tamagui": "^1.121.10"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@tamagui/theme-builder": "^1.121.10",
     "@types/react": "~18.3.12",
+    "@types/react-native-vector-icons": "^6.4.18",
     "expo-dev-client": "^5.0.8",
     "typescript": "^5.3.3"
   },
