Fix style and layout HomeScreen following mockup

--- a/app/app.json
+++ b/app/app.json
@@ -4,23 +4,26 @@
     "slug": "ku-eater",
     "version": "0.1.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/logo_eater.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/splash-icon.png",
+      "image": "./assets/logo_eater.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#006664"
     },
     "ios": {
       "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "foregroundImage": "./assets/logo_eater.png",
+        "backgroundColor": "#006664"
       },
       "package": "io.github.kueater"
-    }
+    },
+    "plugins": [
+      "expo-font"
+    ]
   }
 }
