--- a/app/package.json
+++ b/app/package.json
@@ -12,8 +12,9 @@
     "@react-navigation/native": "^7.0.14",
     "@tamagui/config": "^1.121.10",
     "expo": "~52.0.23",
+    "expo-app-loading": "2.1.1",
     "expo-constants": "^17.0.4",
-    "expo-font": "^13.0.3",
+    "expo-font": "~13.0.3",
     "expo-linking": "^7.0.4",
     "expo-router": "^4.0.16",
     "expo-status-bar": "~2.0.0",
