--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,7 @@
     "ios": "expo run:ios"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.12.6",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@tamagui/config": "^1.121.10",
@@ -17,10 +18,14 @@
     "expo-font": "~13.0.3",
     "expo-linking": "^7.0.4",
     "expo-router": "^4.0.16",
+    "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.0",
+    "google-protobuf": "^3.21.4",
+    "grpc-web": "^1.5.0",
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-gesture-handler": "^2.22.0",
+    "react-native-intersection-observer": "^0.2.0",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
@@ -32,6 +37,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@tamagui/theme-builder": "^1.121.10",
+    "@types/google-protobuf": "^3",
     "@types/react": "~18.3.12",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-native-web": "^0",
@@ -39,5 +45,8 @@
     "typescript": "^5.3.3"
   },
   "private": true,
-  "packageManager": "yarn@4.6.0"
+  "packageManager": "yarn@4.6.0",
+  "resolutions": {
+    "@react-native/gradle-plugin": "0.76.5"
+  }
 }
