--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
-    "ios": "expo run:ios"
+    "ios": "expo run:ios",
+    "util": "node .scripts/run-util.js"
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.12.6",
