--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native": "^7.0.15",
+    "@react-navigation/native-stack": "^7.2.1",
+    "@react-navigation/stack": "^7.1.2",
     "@tamagui/config": "^1.121.10",
     "expo": "~52.0.23",
     "expo-app-loading": "2.1.1",
@@ -21,9 +23,10 @@
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-gesture-handler": "^2.22.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "^3.16.7",
-    "react-native-safe-area-context": "^5.1.0",
-    "react-native-screens": "^4.5.0",
+    "react-native-safe-area-context": "^5.3.0",
+    "react-native-screens": "^4.9.1",
     "react-native-svg": "^15.11.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
