--- a/app/package.json
+++ b/app/package.json
@@ -14,16 +14,17 @@
     "@react-navigation/stack": "^7.1.2",
     "@tamagui/config": "^1.121.10",
     "expo": "~52.0.23",
-    "expo-app-loading": "2.1.1",
     "expo-constants": "^17.0.4",
-    "expo-font": "~13.0.3",
+    "expo-font": "^13.0.4",
     "expo-linking": "^7.0.4",
     "expo-router": "^4.0.16",
+    "expo-splash-screen": "^0.29.22",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.5",
-    "react-native-gesture-handler": "^2.22.0",
+    "react-native-gesture-handler": "^2.24.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-paper": "^5.13.1",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.1",
