--- a/app/package.json
+++ b/app/package.json
@@ -14,8 +14,10 @@
     "@react-navigation/stack": "^7.1.2",
     "@tamagui/config": "^1.121.10",
     "expo": "~52.0.23",
+    "expo-cli": "6.3.10",
     "expo-constants": "^17.0.4",
     "expo-font": "^13.0.4",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "^7.0.4",
     "expo-router": "^4.0.16",
     "expo-splash-screen": "^0.29.22",
@@ -24,8 +26,9 @@
     "react-native": "0.76.5",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.13.1",
-    "react-native-reanimated": "^3.16.7",
+    "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.1",
     "react-native-svg": "^15.11.1",
@@ -35,6 +38,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "latest",
     "@tamagui/theme-builder": "^1.121.10",
     "@types/react": "~18.3.12",
     "@types/react-native-vector-icons": "^6.4.18",
