--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "^7.1.2",
     "@tamagui/config": "^1.121.10",
     "expo": "~52.0.23",
+    "expo-asset": "^11.0.4",
     "expo-cli": "6.3.10",
     "expo-constants": "^17.0.4",
     "expo-font": "^13.0.4",
