--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,9 @@
     "ios": "expo run:ios"
   },
   "dependencies": {
+    "@expo/config-plugins": "~9.0.0",
+    "@expo/metro-config": "~0.19.0",
+    "@expo/prebuild-config": "~8.0.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
@@ -15,15 +18,18 @@
     "@tamagui/config": "^1.121.10",
     "expo": "~52.0.23",
     "expo-asset": "^11.0.4",
-    "expo-cli": "6.3.10",
+    "expo-auth-session": "~6.0.3",
     "expo-constants": "^17.0.4",
     "expo-font": "^13.0.4",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "^7.0.4",
+    "expo-modules-autolinking": "~2.0.0",
     "expo-router": "^4.0.16",
     "expo-splash-screen": "^0.29.22",
     "expo-status-bar": "~2.0.0",
+    "expo-web-browser": "~14.0.2",
     "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
@@ -42,6 +48,7 @@
     "@react-native-community/cli": "latest",
     "@tamagui/theme-builder": "^1.121.10",
     "@types/react": "~18.3.12",
+    "@types/react-dom": "^18",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-native-web": "^0",
     "expo-dev-client": "^5.0.8",
