--- a/app/package.json
+++ b/app/package.json
@@ -5,12 +5,14 @@
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
-    "ios": "expo run:ios"
+    "ios": "expo run:ios",
+    "util": "node .scripts/run-util.js"
   },
   "dependencies": {
     "@expo/config-plugins": "~9.0.0",
     "@expo/metro-config": "~0.19.0",
     "@expo/prebuild-config": "~8.0.0",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
@@ -23,11 +25,15 @@
     "expo-font": "^13.0.4",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "^7.0.4",
+    "expo-localization": "^16.0.1",
     "expo-modules-autolinking": "~2.0.0",
     "expo-router": "^4.0.16",
     "expo-splash-screen": "^0.29.22",
     "expo-status-bar": "~2.0.0",
     "expo-web-browser": "~14.0.2",
+    "google-protobuf": "^3.21.4",
+    "grpc-web": "^1.5.0",
+    "moment-timezone": "^0.5.48",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
@@ -47,6 +53,7 @@
     "@babel/core": "^7.25.2",
     "@react-native-community/cli": "latest",
     "@tamagui/theme-builder": "^1.121.10",
+    "@types/google-protobuf": "^3",
     "@types/react": "~18.3.12",
     "@types/react-dom": "^18",
     "@types/react-native-vector-icons": "^6.4.18",
